--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^138.0.2",
+    "cheerio": "^1.1.2",
     "dayjs": "1.11.13",
+    "fast-xml-parser": "^4.5.3",
     "next": "14.2.5",
     "p-limit": "5.0.0",
+    "puppeteer-core": "^24.22.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rss-parser": "^3.13.0",
@@ -25,6 +29,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "postcss": "8.4.41",
+    "puppeteer": "^24.22.3",
     "tailwindcss": "3.4.10",
     "typescript": "5.4.5"
   }
