--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "crons": [
-      { "path": "/api/v1/refresh", "schedule": "*/1 * * * *" }
-    ]
-  }
+  "crons": [
+    { "path": "/api/v1/refresh", "schedule": "0 6 * * *" }
+  ]
+}
