--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@sparticuz/chromium": "^138.0.2",
+    "@vercel/kv": "^3.0.0",
     "cheerio": "^1.1.2",
     "dayjs": "1.11.13",
     "fast-xml-parser": "^4.5.3",
