--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "1.11.13",
     "fast-xml-parser": "^4.5.3",
     "next": "14.2.5",
+    "nodemailer": "^7.0.9",
     "p-limit": "5.0.0",
     "puppeteer-core": "^24.22.3",
     "react": "18.2.0",
