--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
   "crons": [
-    { "path": "/api/v1/refresh", "schedule": "0 6 * * *" }
+    {
+      "path": "/api/v1/refresh",
+      "schedule": "0 6 * * *"
+    },
+    {
+      "path": "/api/internal/warm-home",
+      "schedule": "*/3 * * * *"
+    }
   ]
 }
