--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/internal/warm-home",
       "schedule": "*/3 * * * *"
+    },
+    {
+      "path": "/api/home/snapshot",
+      "schedule": "*/5 * * * *"
     }
   ]
 }
