--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^1.1.2",
     "dayjs": "1.11.13",
     "fast-xml-parser": "^4.5.3",
+    "lightweight-charts": "^5.0.9",
     "next": "14.2.5",
     "nodemailer": "^7.0.9",
     "p-limit": "5.0.0",
