--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
     {
       "path": "/api/internal/warm-index",
       "schedule": "*/3 * * * *"
+    },
+    {
+      "path": "/api/home/briefing",
+      "schedule": "0 7,11,15,21 * * *"
     }
   ]
 }
