--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.19.0",
     "@sparticuz/chromium": "^138.0.2",
     "@vercel/kv": "^3.0.0",
     "cheerio": "^1.1.2",
@@ -15,8 +17,10 @@
     "fast-xml-parser": "^4.5.3",
     "lightweight-charts": "^5.0.9",
     "next": "14.2.5",
+    "next-auth": "^4.24.13",
     "nodemailer": "^7.0.9",
     "p-limit": "5.0.0",
+    "prisma": "^6.19.0",
     "puppeteer-core": "^24.22.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
